--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 
 rze-app = { path = "crates/rze-app" }
+rze-core = { path = "crates/rze-core" }
 rze-infra = { path = "crates/rze-infra" }
